# tic_tac_toe

./: Cargo.toml
doc/CompSciP/: CREATE_CODE.odt
src/: main.rs
